syntax = "proto3";
package microtick.msg;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/mjackson001/mtzone/x/microtick/msg";

message TxCancelQuote {
  
  uint32 id = 1 [
    (gogoproto.jsontag) = "id"
  ];
  
  bytes requester = 2 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    (gogoproto.jsontag) = "requester"
  ];
  
}

message CancelQuoteData {
  
  uint32 id = 1 [
    (gogoproto.jsontag) = "id"
  ];
  
  bytes account = 2 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    (gogoproto.jsontag) = "account"
  ];
  
  string market = 3 [
    (gogoproto.jsontag) = "market"
  ];
  
  string duration = 4 [
    (gogoproto.jsontag) = "duration"
  ];
  
  cosmos.base.v1beta1.DecCoin consensus = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "consensus"
  ];
  
  int64 time = 6 [
    (gogoproto.jsontag) = "time"
  ];
  
  cosmos.base.v1beta1.DecCoin refund = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "refund"
  ];
  
  cosmos.base.v1beta1.DecCoin slash = 8 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "slash"
  ];
  
  cosmos.base.v1beta1.DecCoin commission = 9 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "commission"
  ];
  
}
